--- a/Fekrah/API/ClientApp/src/app/Shared/components/part-card/part-card.component.html
+++ b/Fekrah/API/ClientApp/src/app/Shared/components/part-card/part-card.component.html
@@ -8,7 +8,7 @@
 
   <!-- صورة -->
   <div class="image-container">
-    <img [src]="part.imageUrl" [alt]="part.name">
+    <img [src]="part.imageUrl" [alt]="part.name" loading="lazy">
   </div>
 
   <!-- اسم القطعة -->
