--- a/Fekrah/API/ClientApp/src/app/Shared/layout/contact-us/contact-us.component.html
+++ b/Fekrah/API/ClientApp/src/app/Shared/layout/contact-us/contact-us.component.html
@@ -26,7 +26,7 @@
             <div class="contact-icon"><i class="fas fa-envelope"></i></div>
             <div class="contact-text">
               <h3>البريد الإلكتروني</h3>
-              <p>info@qetaghyar.com</p>
+              <p>info_qetaghyar.com</p>
             </div>
           </div>
 
