--- a/Fekrah/API/ClientApp/src/app/Shared/components/offer-card/offer-card.component.scss
+++ b/Fekrah/API/ClientApp/src/app/Shared/components/offer-card/offer-card.component.scss
@@ -1,5 +1,5 @@
 .offer-card {
-  background: #fffde7;
+  background:  linear-gradient(90deg, #ffffff, #fcffdf);
   border: 2px dashed #ffc107;
   border-radius: 16px;
   padding: 20px;
