--- a/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
@@ -52,12 +52,12 @@
 
       <app-banner></app-banner>
       <app-featured-sellers></app-featured-sellers>
+      <app-car-brands></app-car-brands>
 
       <app-offers></app-offers>
       <app-part-preview></app-part-preview>
-
       <app-suggested-offers></app-suggested-offers>
-
+      <app-part-types></app-part-types>
     </section>
 
   </div>
