--- a/Fekrah/API/ClientApp/src/app/core/features/home/banner/banner.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/banner/banner.component.scss
@@ -1,12 +1,13 @@
 .slider-container {
-  margin-top: 0; // ✅ ملاصق للهيدر
+  margin: 0 auto;
   padding: 0;
-  width: 100%;
-  height: 400px;
+  width: 97vw;
+  height: 70vh;
   overflow: hidden;
   position: relative;
   background: linear-gradient(to right, #f5f7fa, #c3cfe2);
   border-bottom: 2px solid #ddd;
+  margin-top: 10px;
 
   .slide {
     opacity: 0;
@@ -90,11 +91,11 @@
   }
 
   .prev-button {
-    left: 10px;
+    right: 10px;
   }
 
   .next-button {
-    right: 10px;
+    left: 10px;
   }
 
   .indicators {
