--- a/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
@@ -51,13 +51,13 @@
       <app-categories></app-categories>
 
       <app-banner></app-banner>
-      <app-featured-sellers></app-featured-sellers>
-      <app-car-brands></app-car-brands>
+      <app-featured-sellers id="stores-section"></app-featured-sellers>
+      <app-car-brands id="brands-section"></app-car-brands>
 
-      <app-offers></app-offers>
-      <app-part-preview></app-part-preview>
-      <app-suggested-offers></app-suggested-offers>
-      <app-part-types></app-part-types>
+      <app-offers id="offers-section"></app-offers>
+      <app-part-preview id="latest-section"></app-part-preview>
+      <app-suggested-offers id="suggested-offers"></app-suggested-offers>
+      <app-part-types id="part-types"></app-part-types>
     </section>
 
   </div>
