--- a/Fekrah/API/ClientApp/src/app/Shared/layout/header/header.component.scss
+++ b/Fekrah/API/ClientApp/src/app/Shared/layout/header/header.component.scss
@@ -149,7 +149,10 @@
   background-color: #ff9a00;
   padding: 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-
+  position: sticky;
+  top: 0;
+  z-index: 999; // أقل من الـ header
+  cursor: pointer;
   .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -165,9 +168,6 @@
     direction: rtl;
 
     li {
-      margin: 0;
-      padding: 0;
-
       a {
         display: block;
         padding: 14px 20px;
